--- a/frontend/src/pages/WelcomePage.css
+++ b/frontend/src/pages/WelcomePage.css
@@ -25,7 +25,7 @@ body {
   background-color: var(--background-color) !important;
   overflow-x: hidden;
   font-family: 'Chillax';
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 0 !important;
   padding: 0 !important;
 }
@@ -43,6 +43,7 @@ body {
 }
 
 .about-us {
+  height: 200vh;
   background-color: #0a0c12;
   z-index: 2;
   position: relative;
