--- a/frontend/src/pages/customer/MainPage.module.css
+++ b/frontend/src/pages/customer/MainPage.module.css
@@ -3,7 +3,7 @@
 }
 
 body{
-  background-color: rgb(41, 41, 41);
+  background-color: rgb(41, 41, 41) !important;
 }
 
 .main-section{
@@ -24,7 +24,9 @@ body{
   background-color: azure;
   padding: 20px;
   border-radius: 10px;
+  min-width: 250px;
 }
+
 
 .theme-button:focus{
   outline: none;
