--- a/frontend/src/components/NavBar.module.css
+++ b/frontend/src/components/NavBar.module.css
@@ -11,6 +11,7 @@
   width: 100%;
   height: 4rem;
   display: flex;
+  gap: 2rem;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
@@ -18,6 +19,7 @@
   font-family: general sans;
   font-weight: 500;
   z-index: 2;
+  /* box-shadow: 10px 0px 10px #e2e2f9; */
 }
 
 .nav-btn{
@@ -28,9 +30,13 @@
   transition: all 0.3s ease;
 }
 
+.nav-btn:hover{
+  cursor: pointer;
+}
+
 .nav-btn.active{
   color: #e2e2f9;
-  
+  fill: #e2e2f9;
 }
 
 
@@ -64,3 +70,53 @@
   outline: none;
   box-shadow: none;
 }
+
+.favorites{
+  all: unset;
+  transform: translateY(0.1rem);
+  fill:#bdbdc0;
+}
+
+.search-bar {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: 1px solid #5c5c72;
+  border-radius: 12px;
+  padding: 6px 10px;
+  gap: 8px;
+  width: auto;
+  color: #cfcfe4;
+  height: 2.4rem;
+}
+
+.search-bar input {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #cfcfe4;
+  font-size: 14px;
+  flex: 1;
+}
+
+.search-icon {
+  font-size: 14px;
+  color: #cfcfe4;
+}
+
+.shortcut {
+  display: flex;
+  gap: 4px;
+}
+
+.key {
+  background-color: #2d2d3a;
+  color: #cfcfe4;
+  padding: 2px 6px;
+  border-radius: 6px;
+  font-size: 12px;
+  font-weight: 500;
+  font-family: "SF Mono", monospace;
+}
+
