--- a/frontend/src/components/Sidebar.module.css
+++ b/frontend/src/components/Sidebar.module.css
@@ -20,8 +20,9 @@
   border-radius: 4px;
 }
 .filter-section {
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: 30px;
+  font-family: inter;
 }
 
 .filter-section h3 {
@@ -34,6 +35,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  font-family: inter;
 }
 
 .category-button {
@@ -46,6 +48,7 @@
   cursor: pointer;
   font-size: 14px;
   transition: background 0.2s, border 0.2s;
+  font-family: inter;
 }
 
 .category-button:hover {
@@ -55,49 +58,5 @@
 .category-button.active {
   background-color: #5c5c72;
   border-color: #cfcfe4;
-}
-
-.search-bar {
-  transform: translateX(-5px);
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: 1px solid #5c5c72;
-  border-radius: 12px;
-  padding: 6px 10px;
-  gap: 8px;
-  width: 11rem;
-  color: #cfcfe4;
-  height: 2.4rem;
-}
-
-.search-bar input {
-  transform: translateY(.6rem) translateX(-8px);
-  background: transparent;
-  border: none;
-  outline: none;
-  color: #cfcfe4;
-  font-size: 14px;
-  flex: 1;
-}
-
-.search-icon {
-  font-size: 14px;
-  color: #cfcfe4;
-}
-
-.shortcut {
-  display: flex;
-  gap: 4px;
-}
-
-.key {
-  background-color: #2d2d3a;
-  color: #cfcfe4;
-  padding: 2px 6px;
-  border-radius: 6px;
-  font-size: 12px;
-  font-weight: 500;
-  font-family: "SF Mono", monospace;
 }
 
