--- a/frontend/src/pages/WelcomePage.css
+++ b/frontend/src/pages/WelcomePage.css
@@ -43,8 +43,8 @@ body {
 }
 
 .about-us {
-  height: 200vh;
-  background-color: #0a0c12;
+  height: 100vh;
+  background-color: #f6f3f0;
   z-index: 2;
   position: relative;
 }
