--- a/frontend/src/pages/customer/MainPage.module.css
+++ b/frontend/src/pages/customer/MainPage.module.css
@@ -29,3 +29,12 @@ body{
 .courseWrapper:hover{
   cursor: pointer;
 }
+
+.loader-container{
+  opacity: 1;
+  transition: all 0.5s ease;
+}
+
+.loader-container.fade{
+  opacity: 0;
+}
