--- a/frontend/src/pages/customer/CoursePage.module.css
+++ b/frontend/src/pages/customer/CoursePage.module.css
@@ -1,4 +1,6 @@
-
+a{
+  all: unset;
+}
 
 .heroSection {
   padding-top: 5rem;
@@ -139,6 +141,21 @@
   .ctaButtonsMobile {
     display: none;
   }
+}
+
+.btn-container{
+  display: flex;
+  width: 100%;
+  flex: 1;
+}
+
+.loader-container{
+  opacity: 1;
+  transition: all 0.5s ease;
+}
+
+.loader-container.fade{
+  opacity: 0;
 }
 
 .purchaseBtn {
