--- a/frontend/src/components/Course.module.css
+++ b/frontend/src/components/Course.module.css
@@ -146,3 +146,13 @@
 .favorite:hover {
   transform: scale(1.1);
 }
+
+.remove{
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  transition: transform 0.2s ease;
+}
